--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
           Have a question? Leave your information below and we will get back to
           you as soon as possible.
         </p>
-        <form name="contact" netlify>
+        <form name="contact" method="POST" data-netlify="true">
+          <input type="hidden" name="form-name" value="contact" />
           <div class="form-group">
             <label for="first-name" class="visually-hidden">First Name</label>
             <input
