--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <nav>
           <ul class="main-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a class="current" href="#">Contact</a></li>
           </ul>
         </nav>
